correction contraste page contact

--- a/style.css
+++ b/style.css
@@ -92,10 +92,8 @@ a:hover {
 }
 
 .texture-paper::before {
-    background-image: linear-gradient(rgba(9, 5, 5, 0.1),
-            rgba(0, 0, 0, 0.1)), url("img/texture-paper.webp");
+    background-image: url("img/texture-paper.webp");
     background-size: 280px 280px;
-    z-index: 0;
 }
 
 .b-parallax {
@@ -357,7 +355,8 @@ a[data-lightbox]:hover img {
 }
 
 p {
-    font-size: 14px;
+    font-size: 16px;
+    font-weight: 500;
 }
 
 .text-center p {
